--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
       
     -->
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <title>Taverna Online</title>
   </head>
   
